// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches $outline snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#33343E",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
    }
  }
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#33343E",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches color snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#FFD14A",
      "borderColor": "#FFD14A",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
    }
  }
>
  <Text
    color="accent"
    style={
      Array [
        Object {
          "color": "#33343E",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches default snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#33343E",
      "borderColor": "#33343E",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
    }
  }
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#FFD14A",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches disabled snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#CECECE",
      "borderColor": "#CECECE",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
    }
  }
>
  <Text
    color="primary"
    disabled={true}
    style={
      Array [
        Object {
          "color": "#EEEEEE",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches shape snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#33343E",
      "borderColor": "#33343E",
      "borderRadius": 100,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
    }
  }
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#FFD14A",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`matches width snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#33343E",
      "borderColor": "#33343E",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": 7,
      "paddingLeft": 7,
      "paddingRight": 7,
      "paddingTop": 7,
      "width": 30,
    }
  }
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#FFD14A",
          "fontSize": 17,
          "fontWeight": "600",
          "height": "100%",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    Button
  </Text>
</View>
`;
